# mole

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  cabe.sh  check_format.sh  format.sh  lang.txt  main.cpp  packages.txt
.github/workflows/: build_and_test.yml
docs/: specification.md
include/: ast.hpp  debug_visitor.hpp  exceptions.hpp  lexer.hpp  locale.hpp  operators.hpp  parser.hpp  position.hpp  print_visitor.hpp  reader.hpp  semantic_checker.hpp  string_builder.hpp  token.hpp  types.hpp  visitor.hpp
lib/: CMakeLists.txt
lib/ast/: CMakeLists.txt
lib/ast/include/: ast.hpp  equation_visitors.hpp  operators.hpp  types.hpp  visitor.hpp
lib/ast/src/: ast.cpp  types.cpp
lib/compiled_program/: CMakeLists.txt
lib/compiled_program/include/: compiled_program.hpp
lib/compiled_program/src/: compiled_program.cpp
lib/ir_generator/: CMakeLists.txt
lib/ir_generator/include/: ir_generator.hpp
lib/ir_generator/src/: ir_generator.cpp
lib/json_serializer/: CMakeLists.txt
lib/json_serializer/include/: json_serializer.hpp
lib/json_serializer/src/: json_serializer.cpp
lib/lexer/: CMakeLists.txt
lib/lexer/include/: lexer.hpp  token.hpp
lib/lexer/src/: lexer.cpp  token.cpp
lib/logger/: CMakeLists.txt
lib/logger/include/: logger.hpp
lib/logger/src/: logger.cpp
lib/parser/: CMakeLists.txt
lib/parser/include/: parser.hpp
lib/parser/src/: parser.cpp
lib/print_visitor/: CMakeLists.txt
lib/print_visitor/include/: print_visitor.hpp
lib/print_visitor/src/: print_visitor.cpp
lib/reader/: CMakeLists.txt
lib/reader/include/: reader.hpp
lib/reader/src/: reader.cpp
lib/semantic_checker/: CMakeLists.txt
lib/semantic_checker/include/: semantic_checker.hpp
lib/semantic_checker/src/: semantic_checker.cpp
lib/utils/: CMakeLists.txt
lib/utils/include/: locale.hpp  overloaded.hpp  position.hpp
lib/utils/src/: position.cpp
scripts/: cabe.sh  check_format.sh  coverage.sh  format.sh
src/: debug_visitor.cpp  lexer.cpp  parser.cpp  print_visitor.cpp  reader.cpp  semantic_checker.cpp  token.cpp  types.cpp
tests/: lexer_tests.cpp  parser_tests.cpp  reader_tests.cpp  semantic_tests.cpp
